# lead-gen-automation

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs-build.yml  test.yml
app/: database.py  main.py
app/routers/: automation.py
app/services/: scraper.py
automation-server/config/: settings.py
data/: all_leads_export.csv
docs/: testing.md
docs-site/: .gitignore  README.md  openapi.json  package.json  tailwind.config.ts  tsconfig.json
docs-site/.source/: browser.ts  server.ts
docs-site/app/: layout.config.tsx  layout.tsx  page.tsx
docs-site/app/docs/[[...slug]]/: page.tsx
docs-site/content/docs/: index.mdx  meta.json
docs-site/content/docs/api/admin---automation/: admin_get_all_tasks_admin_automation_tasks_get.mdx  admin_get_stats_admin_automation_stats_get.mdx  admin_stop_all_tasks_admin_automation_stop_all_post.mdx
docs-site/content/docs/api/api-keys/: create_key_admin_keys_post.mdx  delete_key_admin_keys__key_id__delete.mdx  get_key_admin_keys__key_id__get.mdx  get_key_usage_admin_keys__key_id__usage_get.mdx  get_my_info_me_get.mdx  get_my_usage_me_usage_get.mdx  list_keys_admin_keys_get.mdx  revoke_key_admin_keys__key_id__revoke_post.mdx
docs-site/content/docs/api/automation/: export_leads_automation_export_get.mdx  get_all_tasks_automation_tasks_get.mdx  get_task_status_automation_tasks__task_id__get.mdx  start_automation_automation_start_post.mdx  (+2 more)
docs-site/scripts/: generate-docs.mjs
docs-site/src/app/: global.css
docs-site/src/lib/: source.ts
