[project]
name = "lead-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "mysql-connector-python>=9.5.0",
    "playwright>=1.57.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]
